# spotlit-bot

./: .gitignore  Cargo.toml  README.md
res/sql/: 01_db.sql  10_base.sql
src/: handler.rs  main.rs  runtime.rs
src/commands/: mod.rs  monitor.rs
src/db/: dbclient.rs  mod.rs  model.rs  schema.rs
src/helpers/: command_def.rs  command_opt.rs  command_resp.rs  mod.rs
src/monitor/: mod.rs
src/spotify/: mod.rs
