[package]
name = "spotlit-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dashmap = "4.0"
dotenv = "0.15"
evlog = "0.2"
futures = "0.3"
once_cell = "1.8"
regex = "1.5"
rspotify = { version = "0.11", features = ["client-reqwest", "reqwest-native-tls"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "d9c8980"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "unstable_discord_api"
]
